--- a/@music/music/package.json
+++ b/@music/music/package.json
@@ -13,6 +13,7 @@
     "@storybook/addon-essentials": "^7.0.12",
     "@storybook/addon-interactions": "^7.0.12",
     "@storybook/addon-links": "^7.0.12",
+    "@storybook/addon-styling": "^1.0.8",
     "@storybook/blocks": "^7.0.12",
     "@storybook/testing-library": "^0.1.0",
     "autoprefixer": "^10.4.14",
