--- a/@music/music/package.json
+++ b/@music/music/package.json
@@ -22,8 +22,10 @@
     "react-dom": "^18.2.0",
     "sass": "^1.62.1",
     "storybook": "^7.0.12",
+    "storybook-addon-themes": "^6.1.0",
     "storybook-solidjs": "1.0.0-beta.2",
     "storybook-solidjs-vite": "1.0.0-beta.2",
+    "storybook-tailwind-dark-mode": "^1.0.22",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "vite": "^4.3.8",
