--- a/@music/music/tsconfig.json
+++ b/@music/music/tsconfig.json
@@ -7,8 +7,14 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
-    "types": ["vite/client"],
+    "types": [
+      "vite/client"
+    ],
     "noEmit": true,
     "isolatedModules": true
-  }
+  },
+  "include": [
+    "./src",
+    "./.storybook"
+  ]
 }
