--- a/@music/data-etl/package.json
+++ b/@music/data-etl/package.json
@@ -8,7 +8,8 @@
     "data:schema": "node --loader ts-node/esm src/schema.ts",
     "data:validate": "node --loader ts-node/esm src/validate.ts",
     "data:typings": "node --loader ts-node/esm src/typings.ts",
-    "data:transform": "node --loader ts-node/esm src/transform.ts"
+    "data:transform": "node --loader ts-node/esm src/transform.ts",
+    "data:load": "node --loader ts-node/esm src/load.ts"
   },
   "keywords": [],
   "author": "",
