--- a/data-import/Cargo.toml
+++ b/data-import/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-xml-rs = "0.8.14"
+quick-xml = "0.29.0"
 flate2 = "1.0.26"
